objects/Favorite_Content__c.object
<CustomObject>
    <fields>
        <fullName>Content_Version_Id__c</fullName>
        <label>Content Version Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RatingCount__c</fullName>
        <label>RatingCount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive Rating Count</fullName>
                </value>
                <value>
                    <fullName>Negative Rating Count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Favorite Content</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Favorite Content Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Favorite Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>